[package]
name = "ratingers-notifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["executor"]}
tokio = {version = "1", features = ["rt"]}
irc = "0.15"
